# splight-sim

./: .gitignore  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  csv_publisher.py  data.csv  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-manual.yaml  deploy-master.yaml
c37118/: Dockerfile  install.sh  pmu.py  randomPMU.py  tinyPMU.py
c37118/data/: network.json
data/: network.json  network.json.template
data/mqtt/traces/: active_power.csv  active_power_end.csv  active_power_start.csv  available_active_power.csv  contingency.csv  current_end_r.csv  current_end_t.csv  current_r_start.csv  current_start_s.csv  daily_data.csv  dcm_data.csv  derms_data.csv  frequency.csv  minute_data.csv  power_set_point.csv  raw_daily_energy.csv  reactive_power.csv  reactive_power_end.csv  reactive_power_start.csv  state_of_charge.csv  switch_status.csv  switch_status_start.csv  temperature.csv  traces.json  voltage_end.csv  voltage_start.csv
data/mqtt/traces/Atlantica/: active_power.csv  reactive_power.csv  state_of_charge.csv
data/mqtt/traces/Calama/: active_power.csv  active_power_end.csv  active_power_start.csv  available_active_power.csv  contingency.csv  current_s_end.csv  frequency.csv  power_set_point.csv  reactive_power.csv  reactive_power_end.csv  reactive_power_start.csv  switch_status.csv  switch_status_start.csv  voltage_end.csv  voltage_start.csv
data/mqtt/traces/FinisTerrae/: active_power.csv  available_active_power.csv  frequency.csv  power_set_point.csv  reactive_power.csv  state_of_charge.csv  switch_status.csv
data/mqtt/traces/Marcona/: active_power.csv  active_power_end.csv  active_power_start.csv  contingency.csv  current_r_end.csv  reactive_power.csv  (+5 more)
devices/mqtt/: .dockerignore  Dockerfile  ingestor.py  log.py  main.py  requirements.txt  scheduler.py
dnp3/: Dockerfile  install.sh  requirements.txt
dnp3/data/: network.json
dnp3/src/: setup.py
dnp3/src/dnp3/: __init__.py
dnp3/src/node/: __init__.py  channel.py  logger.py  node.py  variable.py
dnp3/src/utils/: args.py  logger.py  types.py
examples/: one_for_each.json
iec60870/: Dockerfile  install.sh
iec60870/data/: network.json
iec60870/src/: iec60870_custom_server.c
iec61850/: Dockerfile  install.sh
iec61850/data/: network.json
iec61850/src/: custom-ied.c
management/: network.py
management/parser/: __init__.py  file.py  ied.py  network.py  parser.py
management/proc/: __init__.py  proc.py
management/proc/ied/: __init__.py  c37118.py  dnp3.py  iec60870.py  iec61850.py  ied.py
management/proc/vpn/: __init__.py  openvpn.py  vpn.py
management/utils/: constants.py  logger.py
modbus/: server.json
modbus2/: server.json
mqtt/: Dockerfile  docker-compose.yml  publisher.py
mqtt/mosquitto/: mosquitto.conf
opcua/: Dockerfile  opcua_server.py
publisher/: Dockerfile  csv_publisher.py  random_publisher.py
publisher/clients/: mqtt.py
scripts/: datapoint_change.py  read_power_values_aws.py  segment_update.py  segment_updater.py  sim_traces.py  simulation-config.json  trace_creator.py  util.py  utils.py
servers/c37118/: pmu.py  randomPMU.py  requirements.txt  tinyPMU.py
servers/dnp3/: Dockerfile  requirements.txt
servers/dnp3/src/: setup.py
servers/iec60870/: Dockerfile
servers/iec60870/data/: network.json
servers/iec60870/src/: CMakeLists.txt  Makefile
servers/iec61850/data/: network.json
servers/iec61850/src/: Makefile  static_model.c  static_model.h
servers/mqtt/: mosquitto.conf
simulation/: main.py  pyproject.toml  reader-config.json  sim_traces.py  simulation-config.json
simulation/hypersim/: data_connector.py  data_saver.py  interfaces.py  operator.py  reader.py
tests/: conftest.py  test_segment_update.py
traces/: build.py  generic.py  utils.py
traces/grids/: atlantica.py  calama.py  finisterrae.py  marcona.py
(+22 files in other folders)
