[project]
name = "SplightSIM"
version = "4.0.0"
description = "A simulated organization"
requires-python = ">=3.8"

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "haversine==2.9.0",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest==8.4.0"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "trash",
]

# Same as Black.
line-length = 79
indent-width = 4

target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
