[project]
name = "HypersimSimulation"
version = "1.0.0"
description = ""
requires-python = ">=3.10,<3.11"

dependencies = [
    "grpcio==1.46.3",
    "grpcio-tools==1.46.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pythonping>=1.1.4",
    "setuptools>=75.3.2",
    "splight-lib==5.22.4.dev2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.12.3",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "trash",
]

# Same as Black.
line-length = 79
indent-width = 4

target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
